--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             
             <div class="video-container">
-                <video src="C:\Users\online\Downloads\Adventurous Travel and Emotional Music For Videos - Free Music (Royalty Free Music).mp4" id="video-slider"loop autoplay muted></video>
+                <video src="./video/Adventurous Travel and Emotional Music For Videos - Free Music (Royalty Free Music).mp4" id="video-slider"loop autoplay muted></video>
             </div>
 
         </section>
